# MealPlanner

./: .gitignore  CMakeLists.txt  README.md
headers/: BaseTag.hpp  Meal.hpp  MealManager.hpp  MultiTag.hpp  Multitag.hpp  Tag.hpp  UIManager.hpp
qtfolder/MealPlanner/: MealPlanner.pro  attributionsdialogue.cpp  attributionsdialogue.h  attributionsdialogue.ui  basetag.cpp  basetag.h  createmeal_basicparams.cpp  createmeal_basicparams.h  createmeal_basicparams.ui  createmeal_nameconflict.cpp  createmeal_nameconflict.h  createmeal_nameconflict.ui  createmeal_notagswarning.cpp  createmeal_notagswarning.h  createmeal_notagswarning.ui  createmeal_promptlinktags.cpp  createmeal_promptlinktags.h  createmeal_promptlinktags.ui  createmultitag_basicparams.cpp  createmultitag_basicparams.h  createmultitag_basicparams.ui  createmultitag_nameconflict.cpp  createmultitag_nameconflict.h  createmultitag_nameconflict.ui  createmultitag_notagswarning.cpp  createmultitag_notagswarning.h  createmultitag_notagswarning.ui  createmultitag_promptlinktags.cpp  createmultitag_promptlinktags.h  createmultitag_promptlinktags.ui  createplan_budget.cpp  createplan_budget.h  createplan_budget.ui  createplan_confirmation.cpp  createplan_confirmation.h  createplan_confirmation.ui  createplan_creationdisplayerror.cpp  createplan_creationdisplayerror.h  createplan_creationdisplayerror.ui  createplan_filename.cpp  (+110 more)
src/: BaseTag.cpp  Meal.cpp  MealManager.cpp  Multitag.cpp  Tag.cpp  UIManager.cpp  main.cpp
tests/: MealManager_test.hpp  Meal_test.hpp  UIManager_test.hpp  test.cpp
